--- a/app/src/main/res/layout/activity_doctor1.xml
+++ b/app/src/main/res/layout/activity_doctor1.xml
@@ -6,8 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".DoctorActivity">
 
+
+    <com.github.rahatarmanahmed.cpv.CircularProgressView
+        android:id="@+id/progress_view"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+
+        android:visibility="visible"
+        app:cpv_animAutostart="true"
+        app:cpv_color="#2698EC"
+        app:cpv_indeterminate="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <RelativeLayout
         android:layout_width="match_parent"
+        android:id="@+id/rl"
+        android:visibility="gone"
         android:layout_height="match_parent">
         <ImageView
             android:layout_width="wrap_content"
@@ -53,6 +71,7 @@
 
     </RelativeLayout>
 
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add"
         android:layout_width="wrap_content"
@@ -60,6 +79,7 @@
         android:layout_gravity="bottom|center"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="#2698EC"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
