--- a/app/src/main/res/layout/activity_register2.xml
+++ b/app/src/main/res/layout/activity_register2.xml
@@ -119,11 +119,32 @@
                 android:paddingStart="15dp"
                 android:paddingEnd="15dp" />
 
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:id="@+id/ll"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_below="@id/edt_password_confirm"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Select Doctor" />
+
+            <org.angmarch.views.NiceSpinner
+                android:id="@+id/nice_spinner"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"/>
+            </LinearLayout>
+
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/edt_password_confirm"
+                android:layout_below="@id/ll"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
                 android:layout_centerHorizontal="true"
