--- a/app/src/main/res/layout/row_item2.xml
+++ b/app/src/main/res/layout/row_item2.xml
@@ -9,92 +9,102 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
         <androidx.cardview.widget.CardView
             android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="3"
             app:cardCornerRadius="25dp"
-            app:cardElevation="8dp"
-            android:layout_height="match_parent">
+            app:cardElevation="8dp">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_img_holder"
                     android:layout_width="75dp"
+                    android:layout_height="75dp"
+                    android:layout_alignParentStart="true"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="20dp"
-                    android:id="@+id/cv_img_holder"
-                    android:layout_alignParentStart="true"
-                    app:cardCornerRadius="15dp"
-                    android:layout_height="75dp">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/profile"
-                    android:scaleType="fitXY"
-                    android:id="@+id/img_profile"
-                    android:layout_centerVertical="true"/>
+                    app:cardCornerRadius="15dp">
+
+                    <ImageView
+                        android:id="@+id/img_profile"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_centerVertical="true"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/profile" />
                 </androidx.cardview.widget.CardView>
+
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_toEndOf="@id/cv_img_holder"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentBottom="true"
-                    android:gravity="center"
                     android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_toEndOf="@id/cv_img_holder"
+                    android:gravity="center"
                     android:orientation="vertical">
+
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="hsin toutou"
-                        android:textStyle="bold"
-                        android:textSize="18sp"
                         android:id="@+id/nomp"
-                        android:layout_toEndOf="@id/cv_img_holder"/>
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toEndOf="@id/cv_img_holder"
+                        android:text="hsin toutou"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="22 ans"
-                        android:textSize="15sp"
                         android:id="@+id/agee"
-                        android:layout_toEndOf="@id/cv_img_holder"/>
-                    <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/btn_tests"
+                        android:layout_toEndOf="@id/cv_img_holder"
+                        android:text="22 ans"
+                        android:textSize="15sp" />
+
+                    <ImageView
+                        android:id="@+id/btn_history"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="6dp"
-                        android:id="@+id/btn_history"/>
+                        android:src="@drawable/btn_tests" />
 
 
                 </LinearLayout>
             </RelativeLayout>
 
         </androidx.cardview.widget.CardView>
+
         <RelativeLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
             <ImageView
-                android:layout_width="match_parent"
-                android:src="@drawable/ic_call"
-                android:padding="25dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
                 android:id="@+id/img_call"
-                android:layout_height="match_parent"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:padding="25dp"
+                android:src="@drawable/ic_call" />
+
             <TextView
+                android:id="@+id/tele"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:id="@+id/tele"/>
+                android:visibility="gone" />
 
         </RelativeLayout>
     </LinearLayout>
-
 
 
 </androidx.cardview.widget.CardView>
